Updated to Java 9 and Clojure 1.9.